frontend/src/hilfe/css/app.css
.help {
  font-size: 18px;
}

  h1 {
    font-size: 30px;
    font-weight: bold;
  }

  h2 {
    font-size: 26px;
    font-weight: bold;
  }

  h3 {
    font-size: 18px;
    padding-top: 0.5em;
    font-weight: bold;
  }

  .title {
    margin-top: 2em;
    margin-bottom: 5.5em;
  }

  a {
    color: #000;
    border-bottom: 1px solid #000;
  }
  a:hover {
    color: #0000FF;
    border-bottom: 1px solid #0000FF;
  }

  .logo {
    margin-top: 3em;
    margin-bottom: 6em;
  }

  .step {
    margin-bottom: 3em;
  }

  .subtext {
    font-size: 26px;
    font-weight: bold;
    margin-bottom: 4em;
  }

  .credits {
    font-size: 22px;
    font-weight: bold;
    margin-top: 6em;
    margin-bottom: 2em;
  }
  .second-image {
    padding-top: 2em;
  }

